syntax = "proto3";

package core.outline.load.service;

service LoadMenuBadgePb {
    rpc LoadMenuBadge (LoadMenuBadgeRequestPb) returns (LoadMenuBadgeResponsePb);
}
message LoadMenuBadgeRequestPb {}
message LoadMenuBadgeResponsePb {
    int32 index = 1;
}
